use global vars

--- a/ansible/all.yml
+++ b/ansible/all.yml
@@ -21,14 +21,14 @@
 - hosts: all
   roles:
 ### OK ###
-#    - info
-#    - upload
-#    - createChangeset
-#    - approveChangeset
-#    - createCDS
+    - info
+    - uploadData
+    - createChangeset
+    - approveChangeset
+    - createCDS
     - getValidationStatus
-#    - storeSnapshot
-#    - exportSnapshot
+    - validate
+    - storeSnapshot
+    - exportSnapshot
 
 ### TO DO ###
-#    - validate
