--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -24,7 +24,7 @@ db_file: "/Users/dimitris/git/sweagle-expert/integrations/ansible/db.json"
 # if use_db_file is set to no
 # then sweagle_url,  sweagle_token and validate_certs are used as source of connection info
 # and validate_certs is used to
-sweagle_url: "https://delfingen.sweagle.com"
+sweagle_url: "https://testing.sweagle.com"
 sweagle_token: "104e6b08-9bbf-4b66-a06a-XXX"
 # Tells if SSL should not validate server certificate, put yes if self-signed certificate
 ignore_ssl: no
